Use 20x20 refresh icon button
Replaces the refresh text button with a 20x20 icon-only control
and removes spacing by nesting it next to the vehicle selector.

Co-authored-by: Cursor <cursoragent@cursor.com>